<resources>
    <string name="app_name">SplitIt</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="create_group">Create group</string>
    <string name="group_name">Group name</string>
    <string name="group_members">Group members</string>
    <string name="back">Back</string>
    <string name="add_member">Add member</string>
    <string name="add_bill">Add bill</string>
    <string name="user_email">User email</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="ok">Ok</string>
    <string name="settle_bills">Settle bills</string>
    <string name="settled_bills">Settled bills</string>
    <string name="current_bills">Current bills</string>
    <string name="paied_by">Paied by</string>
    <string name="bill_members">People who need to give back money</string>
    <string name="groups">Groups</string>
    <string name="members">Members</string>
</resources>